<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/noDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/noDelay"
        android:textColor="#ffff8811"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/delay3"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delay5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/delay5"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delay10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/delay10"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>