<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/ratio_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/ratio1_1"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ratio_4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/ratio4_3"
        android:textColor="#ffff8811"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ratio_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/ratio_full"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>